# rag-from-scratch-langchain

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: compiler.txt  llm.txt
notebook/: document.ipynb
