[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "googleapis-common-protos>=1.73.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
